--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "^1.57.0",
+    "@privy-io/wagmi": "^0.1.1",
+    "@tanstack/react-query": "^5.24.1",
     "@vercel/analytics": "^1.2.2",
+    "convex": "^1.9.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.7.14",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^20",
