--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "viem": "^2.7.14",
     "wagmi": "^2.5.7"
   },
