--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   "dependencies": {
     "@privy-io/react-auth": "^1.57.0",
     "@privy-io/wagmi": "^0.1.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.24.1",
     "@vercel/analytics": "^1.2.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "convex": "^1.9.1",
+    "lucide-react": "^0.359.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.7.14",
     "wagmi": "^2.5.7"
   },
