--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@liveblocks/client": "^1.11.0",
+    "@liveblocks/react": "^1.11.0",
+    "@liveblocks/react-comments": "^1.11.0",
     "@privy-io/react-auth": "^1.57.0",
     "@privy-io/wagmi": "^0.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -18,6 +21,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.24.1",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
