--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@liveblocks/client": "^1.11.0",
     "@liveblocks/react": "^1.11.0",
     "@liveblocks/react-comments": "^1.11.0",
-    "@privy-io/react-auth": "^1.57.0",
+    "@privy-io/react-auth": "^1.59.5",
     "@privy-io/wagmi": "^0.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,6 +22,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.24.1",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +32,6 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.7.14",
