--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@liveblocks/client": "^1.11.0",
+    "@liveblocks/node": "^1.11.0",
     "@liveblocks/react": "^1.11.0",
     "@liveblocks/react-comments": "^1.11.0",
     "@privy-io/react-auth": "^1.59.5",
