--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@liveblocks/node": "^1.11.0",
     "@liveblocks/react": "^1.11.0",
     "@liveblocks/react-comments": "^1.11.0",
-    "@privy-io/react-auth": "^1.59.5",
+    "@privy-io/react-auth": "1.59.6-beta-20240322214908",
     "@privy-io/wagmi": "^0.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
